# mlops-course

./: .gitignore  README.md  pyproject.toml
.github/workflows/: 03-drift-detection.yml  03-retrain-on-drift.yml  05-progressive-deploy.yml  README.md
00-setup/: README.md
lessons/: README.md
lessons/01-churn-ci-cd/: README.md
lessons/01-churn-ci-cd/exercises/: README.md  exercise_1_schema_validator.py  exercise_2_metric_gate.py  exercise_3_predict_endpoint.py  exercise_4_workflow.yml
lessons/01-churn-ci-cd/expected_outputs/: dataset_head.txt  gate_failure_log.txt  metrics.json  predict_examples.txt  pytest_output.txt  server_startup_log.txt  workflow_run_summary.txt
lessons/01-churn-ci-cd/solutions/: solution_4_workflow.yml
lessons/01-churn-ci-cd/tests/: test_metric_gate.py  test_predict_endpoint.py  test_schema_validator.py
lessons/02-monitoring/: README.md
lessons/02-monitoring/exercises/: README.md  exercise_1_logging_app.py  exercise_2_service_metrics.py  exercise_3_alerts.py  exercise_4_workflow.yml
lessons/02-monitoring/expected_outputs/: alert_failure_log.txt  monitoring_pipeline_log.txt  monitoring_report.html  monitoring_report.txt  predictions_log_sample.jsonl  (+6 more)
lessons/03-drift-detection/: README.md
lessons/04-docker-lambda/: .dockerignore  Dockerfile  README.md  requirements-lambda.txt
lessons/05-deployment-strategies/: README.md
shared/: README.md  churn_data.py  churn_drifted_traffic.py  churn_traffic.py  generate_churn_dataset.py  generate_churn_dataset_v2.py  generate_drifted_traffic_dataset.py  generate_traffic_dataset.py
(+112 files in other folders)
